--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,11 @@
     background: #F9F5F6;
   }
 }
+@media (prefers-color-scheme: dark) {
+  :root {
+    background: #F9F5F6;
+  }
+}
 
 @layer components {
   .card {
