--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,12 @@
   }
 }
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    background: #F9F5F6;
+  }
+}
+
 ::-webkit-scrollbar-track {
   border-radius: 30px;
   background-color: #f5f5f5;
