--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,14 +4,13 @@
 
 @media (prefers-color-scheme: light) {
   :root {
-    background: #F9F5F6;
+    @apply text-black bg-white
   }
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    background: #F9F5F6;
-    @apply text-black
+    @apply text-black bg-white
   }
 }
 
